--- a/src/product/templates/products/list.html
+++ b/src/product/templates/products/list.html
@@ -99,9 +99,29 @@
     <div class="card-footer">
         <div class="row justify-content-between">
             <div class="col-md-6">
-                <p>Showing 1 to 10 out of 100</p>
+                <p>Showing {{products.start_index}} to {{products.end_index}} out of {{products.paginator.count}}</p>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-2 align-self-end">
+                <div class="pagination">
+                    <ul class="pagination">
+                        {% if products.has_previous %}
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{ products.previous_page_number }}">&larr;</a>
+                        </li>
+                        {% endif %}
+
+                        {% for page_num in products.paginator.page_range %}
+                        <li class="page-item {% if products.number == page_num %}active{% endif %}">
+                            <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
+                        </li>
+                        {% endfor %}
+                        {% if products.has_next %}
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{ products.next_page_number }}">&rarr;</a>
+                        </li>
+                        {% endif %}
+                    </ul>
+                </div>
 
             </div>
         </div>
